@@ -65,6 +65,7 @@ print_usage(const char* name, bool error)
 	fprintf(os, "  -k BYTES     Parser stack size.\n");
 	fprintf(os, "  -l           Lax (non-strict) parsing.\n");
 	fprintf(os, "  -m           Build and serialise a model (no streaming).\n");
+	fprintf(os, "  -n           Normalise literals.\n");
 	fprintf(os, "  -o SYNTAX    Output syntax: turtle/ntriples/nquads.\n");
 	fprintf(os, "  -p PREFIX    Add PREFIX to blank node IDs.\n");
 	fprintf(os, "  -q           Suppress all output except data.\n");
@@ -147,6 +148,7 @@ main(int argc, char** argv)
 	bool            osyntax_set   = false;
 	bool            validate      = false;
 	bool            use_model     = false;
+	bool            normalise     = false;
 	bool            quiet         = false;
 	size_t          stack_size    = 4194304;
 	const char*     input_string  = NULL;
@@ -179,6 +181,8 @@ main(int argc, char** argv)
 			writer_flags |= SERD_WRITE_LAX;
 		} else if (argv[a][1] == 'm') {
 			use_model = true;
+		} else if (argv[a][1] == 'n') {
+			normalise = true;
 		} else if (argv[a][1] == 'q') {
 			quiet = true;
 		} else if (argv[a][1] == 'v') {
@@ -278,7 +282,7 @@ main(int argc, char** argv)
 
 	SerdModel*      model    = NULL;
 	SerdInserter*   inserter = NULL;
-	const SerdSink* sink     = NULL;
+	const SerdSink* out_sink = NULL;
 	if (use_model) {
 		const SerdModelFlags flags =
 		        SERD_INDEX_SPO | (input_has_graphs ? SERD_INDEX_GRAPHS : 0U) |
@@ -287,9 +291,17 @@ main(int argc, char** argv)
 
 		model    = serd_model_new(world, flags);
 		inserter = serd_inserter_new(model, env, NULL);
-		sink     = serd_inserter_get_sink(inserter);
+		out_sink = serd_inserter_get_sink(inserter);
 	} else {
-		sink = serd_writer_get_sink(writer);
+		out_sink = serd_writer_get_sink(writer);
+	}
+
+	const SerdSink* sink = out_sink;
+
+	SerdNormaliser* normaliser = NULL;
+	if (normalise) {
+		normaliser = serd_normaliser_new(out_sink);
+		sink       = serd_normaliser_get_sink(normaliser);
 	}
 
 	if (quiet) {
@@ -366,6 +378,7 @@ main(int argc, char** argv)
 		serd_range_free(range);
 	}
 
+	serd_normaliser_free(normaliser);
 	serd_node_free(input_name);
 	serd_inserter_free(inserter);
 	serd_model_free(model);
