@@ -65,7 +65,7 @@ is_xdigit(const int c)
 }
 
 static inline bool
-is_space(const char c)
+is_space(const int c)
 {
 	switch (c) {
 	case ' ': case '\f': case '\n': case '\r': case '\t': case '\v':
