@@ -1,0 +1,17 @@
+@prefix mf: <http://www.w3.org/2001/sw/DataAccess/tests/test-manifest#> .
+@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
+@prefix rdft: <http://www.w3.org/ns/rdftest#> .
+
+<>
+	rdf:type mf:Manifest ;
+	rdfs:comment "Serd normalisation test cases" ;
+	mf:entries (
+		<#test-normalise>
+	) .
+
+<#test-normalise>
+	rdf:type rdft:TestTurtleEval ;
+	mf:name "test-normalise" ;
+	mf:action <test-normalise.ttl> ;
+	mf:result <test-normalise.nt> .
