@@ -123,6 +123,7 @@ lib_source = ['src/base64.c',
               'src/n3.c',
               'src/node.c',
               'src/nodes.c',
+              'src/normalise.c',
               'src/range.c',
               'src/reader.c',
               'src/sink.c',
@@ -556,7 +557,7 @@ def test(tst):
     import tempfile
 
     # Create test output directories
-    for i in ['bad', 'good', 'lax', 'terse', 'multifile',
+    for i in ['bad', 'good', 'lax', 'normalise', 'terse', 'multifile',
               'TurtleTests', 'NTriplesTests', 'NQuadsTests', 'TriGTests']:
         try:
             test_dir = os.path.join('tests', i)
@@ -681,6 +682,8 @@ def test(tst):
     test_suite(tst, serd_base + 'bad/', 'bad', None, 'Turtle')
     test_suite(tst, serd_base + 'lax/', 'lax', None, 'Turtle', ['-l'])
     test_suite(tst, serd_base + 'lax/', 'lax', None, 'Turtle')
+    test_suite(tst, serd_base + 'normalise/', 'normalise', None, 'Turtle',
+               ['-n'])
     test_suite(tst, serd_base + 'terse/', 'terse', None, 'Turtle', ['-t'],
                output_syntax='Turtle')
 
